--- a/css/style.css
+++ b/css/style.css
@@ -238,3 +238,21 @@ input[type='number'] {
 .card-icon {
   background: #27394e;
 }
+
+.team {
+  display: flex;
+  margin-top: 5em;
+}
+
+.team-photo {
+  width: 100%;
+  height: 500px;
+  background-size: cover;
+  background-position: center;
+  background-image: url(../img/global-team-1238048.jpg);
+}
+
+.team-text {
+  width: 100%;
+  text-align: center;
+}
